@@ -23,7 +23,7 @@ set APP_BASE_NAME=%~n0
 set APP_HOME=%DIRNAME%
 
 @rem Add default JVM options here. You can also use JAVA_OPTS and GRADLE_OPTS to pass JVM options to this script.
-set DEFAULT_JVM_OPTS=
+set DEFAULT_JVM_OPTS=--enable-native-access=ALL-UNNAMED
 
 @rem Resolve a complete JDK 25, installing it in the user cache if necessary.
 call "%APP_HOME%gradle\sbk-java-bootstrap.bat" true
